crates/acorn-lib/src/schema/research_activity/tests/snapshots/acorn__schema__research_activity__tests__to_prose_with_websites.snap
---
source: crates/acorn-lib/src/schema/research_activity/tests/mod.rs
assertion_line: 268
expression: prose
---
Research Activity Title

## Mission
Purpose of the research

## Challenge
Reason for the research

## Approach
- List of actions taken to perform the research

## Impact
- List of tangible proof that validates the research approach

## Focus
Focus of the research

## Areas
- Areas of research
[Example](https://example.com)
